<resources>
    <string name="app_name">WAFI</string>
    <string name="search">Search...</string>
    <string name="truck_no_123">Truck No. 123</string>
    <string name="tech_name">Tech Name</string>
    <string name="home">Home</string>
    <string name="truck">Truck</string>
    <string name="stock">Stock</string>
    <string name="settings">Settings</string>
    <string name="review">Review</string>
    <string name="message">Message</string>
    <string name="request">Request</string>
    <string name="add">Add</string>
    <string name="transfer">Transfer</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="description_here">Description Here</string>
    <string name="item_name">item_name</string>
    <string name="item_description">item_description</string>
    <string name="cost_before_tax">cost_before_tax</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="item_name_inventory_shelf">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="formatted_item_name">%1$s (%2$d)</string>
    <string name="type_a_message">Type a message</string>
    <string name="send">Send</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="organization">Organization</string>
    <string name="truck_number">Truck Number</string>
    <string name="sender">Sender</string>
    <string name="new_message">New Message</string>

</resources>